feat: get image feature
